<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".mesa1.Bebidas.Mesa1Ginebra">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:autoSizeTextType="uniform"
        android:background="#C4E5FF"
        android:gravity="center"
        android:text="@string/gyn"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/inigyn1"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:autoSizeTextType="none"
        android:onClick="aMenu1"
        android:text="@string/inicio"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/VolverGyn1"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <Button
        android:id="@+id/VolverGyn1"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:autoSizeTextType="none"
        android:onClick="VolverCartBeb1"
        android:text="@string/volv"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textView4"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/inigyn1"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/totgyn1"
        style="@style/Widget.Material3.Button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:autoSizeTextType="none"
        android:backgroundTint="#A9FFAD"
        android:onClick="aTotal1"
        android:text="@string/total"
        android:textColor="#000000"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <ListView
        android:id="@+id/gynlist1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/textView7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="20dp"
        android:layout_height="0dp"
        android:background="#C4E5FF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textView7"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="20dp"
        android:layout_height="0dp"
        android:background="#C4E5FF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="0dp"
        android:layout_height="20dp"
        android:layout_marginBottom="100dp"
        android:background="#C4E5FF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/textView4"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="250dp"
        android:layout_height="20dp"
        android:layout_marginBottom="100dp"
        android:background="#C4E5FF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3"
        app:layout_constraintVertical_bias="1.0"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/kinross1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/kin"
        android:textSize="28sp"
        app:layout_constraintBottom_toTopOf="@+id/arb1"
        app:layout_constraintEnd_toStartOf="@+id/xor1"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <Button
        android:id="@+id/xor1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/xor"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/kinross1"
        app:layout_constraintEnd_toStartOf="@+id/n0gyn1"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/kinross1"
        app:layout_constraintTop_toTopOf="@+id/kinross1" />

    <Button
        android:id="@+id/n0gyn1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/n0"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="@+id/xor1"
        app:layout_constraintEnd_toStartOf="@+id/seven1"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/xor1"
        app:layout_constraintTop_toTopOf="@+id/xor1" />

    <Button
        android:id="@+id/seven1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/sev"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="@+id/n0gyn1"
        app:layout_constraintEnd_toStartOf="@+id/textView4"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/n0gyn1"
        app:layout_constraintTop_toTopOf="@+id/n0gyn1" />

    <Button
        android:id="@+id/arb1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/arb"
        android:textSize="28sp"
        app:layout_constraintBottom_toTopOf="@+id/gin119"
        app:layout_constraintEnd_toStartOf="@+id/rrab1"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/kinross1" />

    <Button
        android:id="@+id/rrab1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/rrab"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="@+id/arb1"
        app:layout_constraintEnd_toStartOf="@+id/cit1"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/arb1"
        app:layout_constraintTop_toTopOf="@+id/arb1" />

    <Button
        android:id="@+id/cit1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/cit"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/rrab1"
        app:layout_constraintEnd_toStartOf="@+id/lev1"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/rrab1"
        app:layout_constraintTop_toTopOf="@+id/rrab1" />

    <Button
        android:id="@+id/lev1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/lev"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="@+id/cit1"
        app:layout_constraintEnd_toStartOf="@+id/textView4"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/cit1"
        app:layout_constraintTop_toTopOf="@+id/cit1" />

    <Button
        android:id="@+id/gin119"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/gin119"
        android:textSize="28sp"
        app:layout_constraintBottom_toTopOf="@+id/marM1"
        app:layout_constraintEnd_toStartOf="@+id/nord1"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/arb1" />

    <Button
        android:id="@+id/nord1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/nord"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="@+id/gin119"
        app:layout_constraintEnd_toStartOf="@+id/fords1"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/gin119"
        app:layout_constraintTop_toTopOf="@+id/gin119" />

    <Button
        android:id="@+id/fords1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/fords"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="@+id/nord1"
        app:layout_constraintEnd_toStartOf="@+id/bloss1"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/nord1"
        app:layout_constraintTop_toTopOf="@+id/nord1" />

    <Button
        android:id="@+id/bloss1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/bloss"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/fords1"
        app:layout_constraintEnd_toStartOf="@+id/textView4"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/fords1"
        app:layout_constraintTop_toTopOf="@+id/fords1" />

    <Button
        android:id="@+id/marM1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/marM"
        android:textSize="28sp"
        app:layout_constraintBottom_toTopOf="@+id/textView6"
        app:layout_constraintEnd_toStartOf="@+id/noname1"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toBottomOf="@+id/gin119" />

    <Button
        android:id="@+id/noname1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/noname"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="@+id/marM1"
        app:layout_constraintEnd_toStartOf="@+id/textView4"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/marM1"
        app:layout_constraintTop_toTopOf="@+id/marM1" />


</androidx.constraintlayout.widget.ConstraintLayout>